@@ -1,2 +1,3 @@
-Makefile
+.deps
 .pure
+Makefile
